kubernetes/clusters/my-cluster/apps/media/ingress.yaml
# Radarr
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: radarr-ingress
  namespace: media
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - radarr.syd.broc.ee
    secretName: radarr-tls
  rules:
  - host: radarr.syd.broc.ee
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: radarr
            port:
              number: 7878
---
# Sonarr
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarr-ingress
  namespace: media
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - sonarr.syd.broc.ee
    secretName: sonarr-tls
  rules:
  - host: sonarr.syd.broc.ee
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sonarr
            port:
              number: 8989
---
# Prowlarr
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prowlarr-ingress
  namespace: media
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - prowlarr.syd.broc.ee
    secretName: prowlarr-tls
  rules:
  - host: prowlarr.syd.broc.ee
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prowlarr
            port:
              number: 9696
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plex-ingress
  namespace: media
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - plex.syd.broc.ee
    secretName: plex-tls
  rules:
  - host: plex.syd.broc.ee
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: plex
            port:
              number: 32400
---
# Seerr
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: seerr-ingress
  namespace: media
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - seerr.syd.broc.ee
    secretName: seerr-tls
  rules:
  - host: seerr.syd.broc.ee
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: seerr
            port:
              number: 5055
---
# qBittorrent
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qbittorrent-ingress
  namespace: media
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - qbittorrent.syd.broc.ee
    secretName: qbittorrent-tls
  rules:
  - host: qbittorrent.syd.broc.ee
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: qbittorrent
            port:
              number: 8080
